# tb3-multimodal-interaction

./: .env.example  .gitignore  CHANGELOG.md  README.md  package.xml  setup.cfg  setup.py
ai_max_vlm_server/: README.md  check_llama_server.sh  restart_qwen3vl_server.sh  start_qwen3vl_server.sh
config/: expression_behaviors.yaml  fastdds_initial_peers.xml  host-manifest.example.toml  week7_p4_demo_matrix.json
deploy/: host_manifest.py  preflight.sh  role.sh  role_status.py
docs/: 7-20-report.md  README.md  architecture.md  demo-runbook.md  deployment.md  evaluation-schema.md  file-lifecycle.md  github-workflow.md  hardware.md  inventory.md  lifecycle.md  limitations.md  migration-map.md  migration-result.md  preflight.md  prerequisites.md  release-checklist.md  reproduction.md  rollback.md  script-classification.md  troubleshooting.md  week7-p4-demo-test-table.md
launch/: asr_adapter.launch.py  behavior_executor.launch.py  device_stack.launch.py  server_dashboard.launch.py  tts_adapter.launch.py  vlm_behavior_client.launch.py
resource/: tb3_multimodal_interaction
scripts/: README.md  audit_repository.py  build_week7_p3_baseline.py  check_ros_graph_contract.py  check_tb3_bringup_graph.py  health_check_full.sh  install_audio_tools_container.sh  prepare_runtime_log.sh  ros_env.sh  run_demo_matrix.py  run_epiphany_guarded.sh  smoke_behavior_executor_dry_run.sh  smoke_behavior_no_motion.sh  smoke_behavior_short_motion.sh  smoke_context_correction.py  smoke_language_contract.py  smoke_manual_io.sh  smoke_microphone_host.sh  smoke_vlm_client.sh  start_device_stack.sh  (+14 more)
(+77 files in other folders)
