<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_multimodal_interaction</name>
  <version>0.2.0</version>
  <description>TurtleBot3 multimodal interaction, behavior execution, device I/O, and dashboard nodes.</description>
  <maintainer email="cuibaitao@example.com">cuibaitao</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
